[gd_scene load_steps=15 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Utils/Overlap/SceneLink.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Sprites/HutInterior.png" type="Texture" id=3]
[ext_resource path="res://World/AreaUtils/Area.gd" type="Script" id=4]
[ext_resource path="res://World/Objects/Furniture/Counter.tscn" type="PackedScene" id=5]
[ext_resource path="res://World/Objects/Furniture/Bed-Single.tscn" type="PackedScene" id=6]
[ext_resource path="res://NPC/NPC.tscn" type="PackedScene" id=7]
[ext_resource path="res://Utils/Actions/SpeechAction.tscn" type="PackedScene" id=8]
[ext_resource path="res://World/Objects/Furniture/WoodStove.tscn" type="PackedScene" id=9]
[ext_resource path="res://Inventory/Items/Potions/Red/red_minor.tres" type="Resource" id=10]
[ext_resource path="res://Utils/Actions/ChestAction.gd" type="Script" id=11]
[ext_resource path="res://Utils/Actions/ChestAction.tscn" type="PackedScene" id=12]

[sub_resource type="AnimationNodeStateMachinePlayback" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18, 10 )

[node name="TinyTown_Inn" type="StaticBody2D" groups=["World"]]
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
build_mode = 1
polygon = PoolVector2Array( 0, 180, 143, 180, 142, 167, 129, 163, 115, 155, 106, 146, 99, 136, 93, 125, 90, 114, 88, 100, 90, 86, 94, 74, 107, 55, 119, 45, 134, 38, 147, 34, 166, 34, 181, 38, 195, 45, 207, 55, 215, 66, 220, 79, 223, 90, 224, 101, 223, 114, 218, 130, 211, 142, 202, 151, 194, 157, 186, 162, 178, 166, 172, 167, 170, 180, 320, 180, 320, 0, 0, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 158, 90 )

[node name="YSort" type="YSort" parent="."]

[node name="Player" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( 157, 166 )

[node name="NPCs" type="YSort" parent="YSort"]

[node name="NPC" parent="YSort/NPCs" instance=ExtResource( 7 )]
position = Vector2( 147, 124 )
is_stationary = true

[node name="AnimationTree" parent="YSort/NPCs/NPC" index="4"]
parameters/playback = SubResource( 2 )

[node name="CollisionShape2D" parent="YSort/NPCs/NPC/InteractionZone" index="0"]
position = Vector2( 0, 9 )
rotation = 0.0
scale = Vector2( 2, 3 )

[node name="Actions" parent="YSort/NPCs/NPC/InteractionZone" index="1"]
script = ExtResource( 11 )

[node name="SpeechAction" parent="YSort/NPCs/NPC/InteractionZone/Actions" index="0" instance=ExtResource( 8 )]
text_array = [ "Welcome to the Tiny Town Inn!", "We are not open for business yet, but do come back again when you have an opportunity.", "Here is a small pick me up for the road as a gift." ]

[node name="ChestAction" parent="YSort/NPCs/NPC/InteractionZone/Actions" index="1" instance=ExtResource( 12 )]
items = [ ExtResource( 10 ) ]

[node name="Furniture" type="YSort" parent="YSort"]

[node name="Bed-Single" parent="YSort/Furniture" instance=ExtResource( 6 )]
position = Vector2( 201, 68 )

[node name="Bed-Single2" parent="YSort/Furniture" instance=ExtResource( 6 )]
position = Vector2( 157, 37 )

[node name="Bed-Single3" parent="YSort/Furniture" instance=ExtResource( 6 )]
position = Vector2( 113, 67 )

[node name="Counter2" parent="YSort/Furniture" instance=ExtResource( 5 )]
position = Vector2( 145, 133 )

[node name="Counter3" parent="YSort/Furniture" instance=ExtResource( 5 )]
position = Vector2( 195, 133 )

[node name="Counter" parent="YSort/Furniture" instance=ExtResource( 5 )]
position = Vector2( 170, 133 )

[node name="WoodStove" parent="YSort/Furniture" instance=ExtResource( 9 )]
position = Vector2( 158, 96 )

[node name="SceneLinks" type="Node2D" parent="."]

[node name="TinyTown" parent="SceneLinks" instance=ExtResource( 2 )]
position = Vector2( 157, 191 )
destination_reference = "res://World/Above/TinyTown.tscn"
exit_location = Vector2( -238, 110 )

[node name="CollisionShape2D" parent="SceneLinks/TinyTown" index="0"]
shape = SubResource( 1 )

[editable path="YSort/NPCs/NPC"]
[editable path="YSort/NPCs/NPC/InteractionZone"]
[editable path="YSort/NPCs/NPC/PlayerDetectionZone"]
[editable path="SceneLinks/TinyTown"]
