[gd_scene load_steps=23 format=2]

[ext_resource path="res://World/Below/Terrain.tscn" type="PackedScene" id=1]
[ext_resource path="res://Utils/Camera/FollowPlayerCamera.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/AreaUtils/BelowYSort.tscn" type="PackedScene" id=3]
[ext_resource path="res://World/Objects/Doors/LadderLower.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/Objects/Doors/BelowDoors.tscn" type="PackedScene" id=5]
[ext_resource path="res://World/AreaUtils/Area.gd" type="Script" id=6]
[ext_resource path="res://World/Objects/Switches/RedBlueSwitch.tscn" type="PackedScene" id=7]
[ext_resource path="res://Utils/Overlap/SceneLink.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/BarrierBlob.tscn" type="PackedScene" id=9]
[ext_resource path="res://Utils/Controllers/ProximitySpawnController.tscn" type="PackedScene" id=10]
[ext_resource path="res://Enemies/Ghost.tscn" type="PackedScene" id=11]
[ext_resource path="res://Utils/Receivers/RemoveNodeReceiver.tscn" type="PackedScene" id=12]
[ext_resource path="res://Utils/Emitters/RemoveNodeEmitter.tscn" type="PackedScene" id=13]
[ext_resource path="res://Utils/Emitters/ModifyPropertyEmitter.tscn" type="PackedScene" id=14]
[ext_resource path="res://Utils/Receivers/ModifyPropertyReceiver.tscn" type="PackedScene" id=15]
[ext_resource path="res://Utils/Overlap/DetectionZone.tscn" type="PackedScene" id=16]
[ext_resource path="res://Enemies/Slider.tscn" type="PackedScene" id=17]
[ext_resource path="res://World/Objects/PushObjects/PStoneBlock.tscn" type="PackedScene" id=18]

[sub_resource type="CircleShape2D" id=2]
radius = 43.0116

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 71, 47 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 71, 40.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40.5, 10 )

[node name="BPC3b" type="Node2D" groups=["World"]]
script = ExtResource( 6 )

[node name="Terrain" parent="." instance=ExtResource( 1 )]

[node name="ColorRect" parent="Terrain" index="0"]
margin_left = -4896.0
margin_right = 4890.0

[node name="Walls" parent="Terrain" index="1"]
tile_data = PoolIntArray( -524298, 0, 65537, -524297, 0, 65537, -524296, 0, 65537, -524295, 0, 65537, -524294, 0, 65537, -524293, 0, 65537, -524292, 0, 65537, -524291, 0, 65537, -524290, 0, 65537, -524289, 0, 65537, -589824, 0, 65537, -589823, 0, 65537, -589822, 0, 65537, -589821, 0, 65537, -589820, 0, 65537, -589819, 0, 65537, -589818, 0, 65537, -589817, 0, 65537, -589816, 0, 65537, -589815, 0, 65537, -589814, 0, 65537, -589813, 0, 65537, -589812, 0, 65537, -458762, 0, 65537, -458761, 0, 65537, -458760, 0, 65537, -458759, 0, 65537, -458758, 0, 65537, -458757, 0, 65537, -458756, 0, 65537, -458755, 0, 65537, -458754, 0, 65537, -458753, 0, 65537, -524288, 0, 65537, -524287, 0, 65537, -524286, 0, 65537, -524285, 0, 65537, -524284, 0, 65537, -524283, 0, 65537, -524282, 0, 65537, -524281, 0, 65537, -524280, 0, 65537, -524279, 0, 65537, -524278, 0, 65537, -524277, 0, 65537, -524276, 0, 65537, -393226, 0, 65537, -393225, 0, 65537, -393224, 0, 5, -393223, 0, 6, -393222, 0, 6, -393221, 0, 6, -393220, 0, 6, -393219, 0, 6, -393218, 0, 6, -393217, 0, 6, -458752, 0, 6, -458751, 0, 6, -458750, 0, 7, -458749, 0, 5, -458748, 0, 6, -458747, 0, 6, -458744, 0, 6, -458743, 0, 6, -458742, 0, 7, -458741, 0, 65537, -458740, 0, 65537, -327690, 0, 65537, -327689, 0, 65537, -327688, 0, 65541, -327687, 0, 65542, -327686, 0, 65542, -327685, 0, 65542, -327684, 0, 65542, -327683, 0, 65542, -327682, 0, 65542, -327681, 0, 65542, -393216, 0, 65542, -393215, 0, 65542, -393214, 0, 131076, -393213, 0, 131075, -393212, 0, 65542, -393211, 0, 65542, -393208, 0, 65542, -393207, 0, 65542, -393206, 0, 65543, -393205, 0, 65537, -393204, 0, 65537, -262154, 0, 65537, -262153, 0, 65537, -262152, 0, 131077, -327678, 0, 196616, -327677, 0, 196617, -327670, 0, 131079, -327669, 0, 65537, -327668, 0, 65537, -196618, 0, 65537, -196617, 0, 65537, -196616, 0, 131077, -196611, 0, 8, -196610, 0, 196614, -196609, 0, 196614, -262144, 0, 196614, -262143, 0, 196614, -262142, 0, 196614, -262141, 0, 9, -262134, 0, 131079, -262133, 0, 65537, -262132, 0, 65537, -131082, 0, 65537, -131081, 0, 65537, -131080, 0, 131077, -131075, 0, 65539, -131074, 0, 6, -131073, 0, 6, -196608, 0, 6, -196607, 0, 6, -196606, 0, 7, -196605, 0, 65545, -196598, 0, 131079, -196597, 0, 65537, -196596, 0, 65537, -65546, 0, 65537, -65545, 0, 65537, -65544, 0, 131077, -65539, 0, 196616, -65538, 0, 65542, -65537, 0, 65542, -131072, 0, 65542, -131071, 0, 65542, -131070, 0, 65543, -131069, 0, 131077, -131062, 0, 131079, -131061, 0, 65537, -131060, 0, 65537, -10, 0, 65537, -9, 0, 65537, -8, 0, 131077, -65534, 0, 131079, -65533, 0, 131077, -65526, 0, 131079, -65525, 0, 65537, -65524, 0, 65537, 65526, 0, 65537, 65527, 0, 65537, 65528, 0, 196613, 65529, 0, 196614, 65530, 0, 196614, 65531, 0, 196614, 65532, 0, 196614, 65533, 0, 196614, 65534, 0, 196614, 65535, 0, 196614, 0, 0, 196614, 1, 0, 196614, 2, 0, 196615, 3, 0, 196613, 4, 0, 196614, 5, 0, 196614, 6, 0, 196614, 7, 0, 196614, 8, 0, 196614, 9, 0, 196614, 10, 0, 196615, 11, 0, 65537, 12, 0, 65537, 131062, 0, 65537, 131063, 0, 65537, 131064, 0, 65537, 131065, 0, 65537, 131066, 0, 65537, 131067, 0, 65537, 131068, 0, 65537, 131069, 0, 65537, 131070, 0, 65537, 131071, 0, 65537, 65536, 0, 65537, 65537, 0, 65537, 65538, 0, 65537, 65539, 0, 65537, 65540, 0, 65537, 65541, 0, 65537, 65542, 0, 65537, 65543, 0, 65537, 65544, 0, 65537, 65545, 0, 65537, 65546, 0, 65537, 65547, 0, 65537, 65548, 0, 65537, 196598, 0, 65537, 196599, 0, 65537, 196600, 0, 65537, 196601, 0, 65537, 196602, 0, 65537, 196603, 0, 65537, 196604, 0, 65537, 196605, 0, 65537, 196606, 0, 65537, 196607, 0, 65537, 131072, 0, 65537, 131073, 0, 65537, 131074, 0, 65537, 131075, 0, 65537, 131076, 0, 65537, 131077, 0, 65537, 131078, 0, 65537, 131079, 0, 65537, 131080, 0, 65537, 131081, 0, 65537, 131082, 0, 65537, 131083, 0, 65537, 131084, 0, 65537 )

[node name="Camera2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 0 )

[node name="TopLeft" parent="Camera2D/Limits" index="0"]
position = Vector2( -256, -216 )

[node name="BottomRight" parent="Camera2D/Limits" index="1"]
position = Vector2( 354, 34 )

[node name="YSort" parent="." instance=ExtResource( 3 )]

[node name="RemoteTransform2D" parent="YSort/Player" index="11"]
remote_path = NodePath("../../../Camera2D")

[node name="ProximitySpawnController" parent="YSort/MobileEnemies" index="0" instance=ExtResource( 10 )]
position = Vector2( 225, -75 )
spawn_unit = ExtResource( 11 )

[node name="CollisionShape2D" parent="YSort/MobileEnemies/ProximitySpawnController/PlayerDetectionZone" index="0"]
shape = SubResource( 2 )

[node name="RemoveNodeEmitter" parent="YSort/MobileEnemies/ProximitySpawnController" instance=ExtResource( 13 )]
signal_name = "spawn_died"
signal_code = "remove_barrier_blob"

[node name="ModifyPropertyEmitter" parent="YSort/MobileEnemies/ProximitySpawnController" instance=ExtResource( 14 )]
signal_name = "spawn_died"
signal_code = "activate_switch"

[node name="Slider" parent="YSort/MobileEnemies" index="1" instance=ExtResource( 17 )]
position = Vector2( -225, -149 )

[node name="DetectionZonePivot" parent="YSort/MobileEnemies/Slider/DetectionWanderController/DetectionZones" index="0" instance=ExtResource( 16 )]

[node name="DetectionZonePivot2" parent="YSort/MobileEnemies/Slider/DetectionWanderController/DetectionZones" index="1" instance=ExtResource( 16 )]
position = Vector2( 122, 2 )

[node name="DetectionZonePivot3" parent="YSort/MobileEnemies/Slider/DetectionWanderController/DetectionZones" index="2" instance=ExtResource( 16 )]
position = Vector2( 121, 65 )

[node name="DetectionZonePivot4" parent="YSort/MobileEnemies/Slider/DetectionWanderController/DetectionZones" index="3" instance=ExtResource( 16 )]
position = Vector2( 1, 65 )

[node name="CollisionShape2D" parent="YSort/MobileEnemies/Slider/Node/PlayerDetectionZone" index="0"]
position = Vector2( -162, -112 )
shape = SubResource( 3 )

[node name="Slider2" parent="YSort/MobileEnemies" index="2" instance=ExtResource( 17 )]
position = Vector2( -103, -2 )

[node name="DetectionZonePivot" parent="YSort/MobileEnemies/Slider2/DetectionWanderController/DetectionZones" index="0" instance=ExtResource( 16 )]
position = Vector2( -120, 1 )

[node name="DetectionZonePivot2" parent="YSort/MobileEnemies/Slider2/DetectionWanderController/DetectionZones" index="1" instance=ExtResource( 16 )]
position = Vector2( -121, -59 )

[node name="DetectionZonePivot3" parent="YSort/MobileEnemies/Slider2/DetectionWanderController/DetectionZones" index="2" instance=ExtResource( 16 )]
position = Vector2( -1, -58 )

[node name="DetectionZonePivot4" parent="YSort/MobileEnemies/Slider2/DetectionWanderController/DetectionZones" index="3" instance=ExtResource( 16 )]
position = Vector2( -1, 1 )

[node name="CollisionShape2D" parent="YSort/MobileEnemies/Slider2/Node/PlayerDetectionZone" index="0"]
position = Vector2( -162, -24.5 )
shape = SubResource( 4 )

[node name="LadderLower" parent="YSort/Portals" index="0" instance=ExtResource( 4 )]
position = Vector2( 32, -14 )
destination_reference = "res://World/Below/BeachPalaceCellar/BPC2b.tscn"
exit_location = Vector2( 174, -135 )
exit_direction = Vector2( -1, 0 )

[node name="Door" parent="YSort/Portals" index="1" instance=ExtResource( 5 )]
position = Vector2( 224, -195 )
signal_code = "BPC3b_door"

[node name="RedBlueSwitch" parent="YSort/Portals" index="2" instance=ExtResource( 7 )]
position = Vector2( 297, -143 )
signal_code = "BPC3b_door"
active = false

[node name="ModifyPropertyReceiver" parent="YSort/Portals/RedBlueSwitch" instance=ExtResource( 15 )]
signal_code = "activate_switch"
property = "active"
value_array = [ true ]

[node name="RemoveNodeReceiver" parent="YSort/Portals" index="3" instance=ExtResource( 12 )]
signal_code = "remove_barrier_blob"

[node name="BarrierBlob" parent="YSort/Portals/RemoveNodeReceiver" instance=ExtResource( 9 )]
position = Vector2( 296, -134 )

[node name="StoneBlocks" type="YSort" parent="YSort"]

[node name="PStoneBlock" parent="YSort/StoneBlocks" instance=ExtResource( 18 )]
position = Vector2( -129, -29 )

[node name="PStoneBlock2" parent="YSort/StoneBlocks" instance=ExtResource( 18 )]
position = Vector2( -152, -29 )

[node name="PStoneBlock3" parent="YSort/StoneBlocks" instance=ExtResource( 18 )]
position = Vector2( -175, -29 )

[node name="PStoneBlock4" parent="YSort/StoneBlocks" instance=ExtResource( 18 )]
position = Vector2( -198, -108 )

[node name="PStoneBlock6" parent="YSort/StoneBlocks" instance=ExtResource( 18 )]
position = Vector2( -175, -108 )

[node name="PStoneBlock7" parent="YSort/StoneBlocks" instance=ExtResource( 18 )]
position = Vector2( -152, -108 )

[node name="PStoneBlock8" parent="YSort/StoneBlocks" instance=ExtResource( 18 )]
position = Vector2( -129, -108 )

[node name="PStoneBlock5" parent="YSort/StoneBlocks" instance=ExtResource( 18 )]
position = Vector2( -198, -29 )

[node name="SceneLinks" type="Node2D" parent="."]

[node name="SceneLink" parent="SceneLinks" instance=ExtResource( 8 )]
position = Vector2( 224, -192 )
destination_reference = "res://World/Below/BeachPalaceCellar/BPC3c.tscn"
exit_location = Vector2( -63, 45 )
exit_direction = Vector2( 0, -1 )

[node name="CollisionShape2D" parent="SceneLinks/SceneLink" index="0"]
position = Vector2( 0.5, 0 )
shape = SubResource( 1 )

[editable path="Terrain"]
[editable path="Camera2D"]
[editable path="YSort"]
[editable path="YSort/MobileEnemies/ProximitySpawnController"]
[editable path="YSort/MobileEnemies/ProximitySpawnController/PlayerDetectionZone"]
[editable path="YSort/MobileEnemies/Slider"]
[editable path="YSort/MobileEnemies/Slider/DetectionWanderController"]
[editable path="YSort/MobileEnemies/Slider/Node/PlayerDetectionZone"]
[editable path="YSort/MobileEnemies/Slider/CollisionDetector"]
[editable path="YSort/MobileEnemies/Slider/HitBox"]
[editable path="YSort/MobileEnemies/Slider/HitBox2"]
[editable path="YSort/MobileEnemies/Slider2"]
[editable path="YSort/MobileEnemies/Slider2/DetectionWanderController"]
[editable path="YSort/MobileEnemies/Slider2/Node/PlayerDetectionZone"]
[editable path="YSort/MobileEnemies/Slider2/CollisionDetector"]
[editable path="YSort/MobileEnemies/Slider2/HitBox"]
[editable path="YSort/MobileEnemies/Slider2/HitBox2"]
[editable path="SceneLinks/SceneLink"]
