[gd_scene load_steps=11 format=2]

[ext_resource path="res://World/Below/Terrain.tscn" type="PackedScene" id=1]
[ext_resource path="res://Utils/Camera/FollowPlayerCamera.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/AreaUtils/BelowYSort.tscn" type="PackedScene" id=3]
[ext_resource path="res://World/Objects/Doors/LadderLower.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/AreaUtils/Area.gd" type="Script" id=5]
[ext_resource path="res://Utils/Overlap/SceneLink.tscn" type="PackedScene" id=6]
[ext_resource path="res://Utils/Controllers/SpawnController.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/Bat.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/VoidBlob.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 54, 10 )

[node name="BPC3a" type="Node2D" groups=["World"]]
script = ExtResource( 5 )

[node name="Terrain" parent="." instance=ExtResource( 1 )]

[node name="ColorRect" parent="Terrain" index="0"]
margin_left = -4889.0
margin_top = -3492.0
margin_right = 4897.0
margin_bottom = 3443.0

[node name="Walls" parent="Terrain" index="1"]
tile_data = PoolIntArray( -262165, 0, 65537, -262164, 0, 65537, -262163, 0, 65537, -262162, 0, 65537, -262161, 0, 65537, -262160, 0, 65537, -262159, 0, 65537, -262158, 0, 65537, -262157, 0, 65537, -262156, 0, 65537, -262155, 0, 65537, -262154, 0, 65537, -262153, 0, 65537, -262152, 0, 65537, -262151, 0, 65537, -262150, 0, 65537, -262149, 0, 65537, -262148, 0, 65537, -262147, 0, 65537, -262146, 0, 65537, -262145, 0, 65537, -327680, 0, 65537, -327679, 0, 65537, -327678, 0, 65537, -327677, 0, 65537, -196629, 0, 65537, -196628, 0, 65537, -196627, 0, 65537, -196626, 0, 65537, -196625, 0, 65537, -196624, 0, 65537, -196623, 0, 65537, -196622, 0, 65537, -196621, 0, 65537, -196620, 0, 65537, -196619, 0, 65537, -196618, 0, 65537, -196617, 0, 65537, -196616, 0, 65537, -196615, 0, 65537, -196614, 0, 65537, -196613, 0, 65537, -196612, 0, 65537, -196611, 0, 65537, -196610, 0, 65537, -196609, 0, 65537, -262144, 0, 65537, -262143, 0, 65537, -262142, 0, 65537, -262141, 0, 65537, -131093, 0, 65537, -131092, 0, 65537, -131091, 0, 5, -131090, 0, 6, -131089, 0, 6, -131088, 0, 6, -131087, 0, 6, -131086, 0, 6, -131085, 0, 6, -131084, 0, 6, -131083, 0, 6, -131082, 0, 6, -131081, 0, 6, -131080, 0, 6, -131079, 0, 6, -131078, 0, 6, -131077, 0, 6, -131076, 0, 6, -131075, 0, 6, -131074, 0, 6, -131073, 0, 6, -196608, 0, 6, -196607, 0, 7, -196606, 0, 65537, -196605, 0, 65537, -65557, 0, 65537, -65556, 0, 65537, -65555, 0, 65541, -65554, 0, 65542, -65553, 0, 65542, -65552, 0, 65542, -65551, 0, 65542, -65550, 0, 65542, -65549, 0, 65542, -65548, 0, 65542, -65547, 0, 65542, -65546, 0, 65542, -65545, 0, 65542, -65544, 0, 65542, -65543, 0, 65542, -65542, 0, 65542, -65541, 0, 65542, -65540, 0, 65542, -65539, 0, 65542, -65538, 0, 65542, -65537, 0, 65542, -131072, 0, 65542, -131071, 0, 65543, -131070, 0, 65537, -131069, 0, 65537, -21, 0, 65537, -20, 0, 65537, -19, 0, 131077, -65535, 0, 131079, -65534, 0, 65537, -65533, 0, 65537, 65515, 0, 65537, 65516, 0, 65537, 65517, 0, 196613, 65518, 0, 196614, 65519, 0, 196614, 65520, 0, 196614, 65521, 0, 196614, 65522, 0, 196614, 65523, 0, 196614, 65524, 0, 196614, 65525, 0, 196614, 65526, 0, 196614, 65527, 0, 196614, 65528, 0, 196614, 65529, 0, 196614, 65530, 0, 196614, 65531, 0, 196614, 65532, 0, 393221, 65535, 0, 393222, 0, 0, 196614, 1, 0, 196615, 2, 0, 65537, 3, 0, 65537, 131051, 0, 65537, 131052, 0, 65537, 131053, 0, 65537, 131054, 0, 65537, 131055, 0, 65537, 131056, 0, 65537, 131057, 0, 65537, 131058, 0, 65537, 131059, 0, 65537, 131060, 0, 65537, 131061, 0, 65537, 131062, 0, 65537, 131063, 0, 65537, 131064, 0, 65537, 131065, 0, 65537, 131066, 0, 65537, 131067, 0, 65537, 131068, 0, 393224, 131069, 0, 393223, 131070, 0, 393223, 131071, 0, 393225, 65536, 0, 65537, 65537, 0, 65537, 65538, 0, 65537, 65539, 0, 65537, 196587, 0, 65537, 196588, 0, 65537, 196589, 0, 65537, 196590, 0, 65537, 196591, 0, 65537, 196592, 0, 65537, 196593, 0, 65537, 196594, 0, 65537, 196595, 0, 65537, 196596, 0, 65537, 196597, 0, 65537, 196598, 0, 65537, 196599, 0, 65537, 196600, 0, 65537, 196601, 0, 65537, 196602, 0, 65537, 196603, 0, 65537, 196604, 0, 65537, 196605, 0, 65537, 196606, 0, 65537, 196607, 0, 65537, 131072, 0, 65537, 131073, 0, 65537, 131074, 0, 65537, 131075, 0, 65537 )

[node name="Camera2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 0 )

[node name="TopLeft" parent="Camera2D/Limits" index="0"]
position = Vector2( -609, -112 )

[node name="BottomRight" parent="Camera2D/Limits" index="1"]
position = Vector2( 65, 66 )

[node name="YSort" parent="." instance=ExtResource( 3 )]

[node name="RemoteTransform2D" parent="YSort/Player" index="11"]
remote_path = NodePath("../../../Camera2D")

[node name="SpawnController" parent="YSort/MobileEnemies" index="0" instance=ExtResource( 7 )]
position = Vector2( -145, -14 )
spawn_unit = ExtResource( 8 )

[node name="SpawnController2" parent="YSort/MobileEnemies" index="1" instance=ExtResource( 7 )]
position = Vector2( -263, -11 )
spawn_unit = ExtResource( 8 )
spawn_quantity = 2

[node name="SpawnController3" parent="YSort/MobileEnemies" index="2" instance=ExtResource( 7 )]
position = Vector2( -368, -10 )
spawn_unit = ExtResource( 8 )
spawn_quantity = 2

[node name="SpawnController4" parent="YSort/MobileEnemies" index="3" instance=ExtResource( 7 )]
position = Vector2( -469, -9 )
spawn_unit = ExtResource( 8 )

[node name="SpawnController5" parent="YSort/MobileEnemies" index="4" instance=ExtResource( 7 )]
position = Vector2( -205, -10 )
spawn_unit = ExtResource( 9 )

[node name="SpawnController6" parent="YSort/MobileEnemies" index="5" instance=ExtResource( 7 )]
position = Vector2( -420, -9 )
spawn_unit = ExtResource( 9 )

[node name="LadderLower2" parent="YSort/Portals" index="0" instance=ExtResource( 4 )]
position = Vector2( -556, -17 )
destination_reference = "res://World/Below/BeachPalaceCellar/BPC2c.tscn"
exit_direction = Vector2( 1, 0 )

[node name="SceneLinks" type="Node2D" parent="."]

[node name="BPC3c" parent="SceneLinks" instance=ExtResource( 6 )]
position = Vector2( -62, 77 )
destination_reference = "res://World/Below/BeachPalaceCellar/BPC3b.tscn"
exit_location = Vector2( 226, -147 )

[node name="CollisionShape2D" parent="SceneLinks/BPC3c" index="0"]
shape = SubResource( 1 )

[editable path="Terrain"]
[editable path="Camera2D"]
[editable path="YSort"]
[editable path="SceneLinks/BPC3c"]
